--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "vibe-o-thon",
+  "name": "vibe-o-rama",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "next build",
+    "deploy": "gh-pages -d out --dotfiles"
   },
   "dependencies": {
     "next": "14.2.5",
@@ -19,6 +21,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
